--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "firebase": "^10.3.1",
-    "react-firebase-hooks": "^5.1.1",
-    "@mui/material": "^5.14.5",
-    "@mui/icons-material": "^5.14.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.2.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@mui/x-data-grid": "^6.10.2",
     "@mui/x-date-pickers": "^6.10.2",
-    "dayjs": "^1.11.9",
-    "react-hook-form": "^7.45.4",
-    "@hookform/resolvers": "^3.2.0",
-    "yup": "^1.2.0",
+    "dayjs": "^1.11.13",
+    "firebase": "^10.3.1",
     "notistack": "^3.0.1",
-    "uuid": "^9.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.5",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "scripts": {
     "dev": "vite",
