--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
+    "recharts": "^3.1.2",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
