--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-date-pickers": "^6.10.2",
     "dayjs": "^1.11.13",
     "firebase": "^10.3.1",
+    "lucide-react": "^0.539.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
