--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "type-check": "tsc --noEmit",
     "firebase:emulators": "firebase emulators:start",
     "firebase:deploy": "firebase deploy",
-    "start": "serve -s dist -l 3000"
+    "start": "serve -s dist -l 3000 --single"
   }
 }
