--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,11 @@
 services:
   - type: web
     name: tienda-pro
-    env: static
-    buildCommand: npm install && npm run build
+    env: node
+    buildCommand: npm run build
+    startCommand: npm start
     staticPublishPath: ./dist
-    envVars:
-      - key: REACT_APP_FIREBASE_API_KEY
-        sync: false
-      - key: REACT_APP_FIREBASE_AUTH_DOMAIN
-        sync: false
-      - key: REACT_APP_FIREBASE_PROJECT_ID
-        sync: false
-      - key: REACT_APP_FIREBASE_STORAGE_BUCKET
-        sync: false
-      - key: REACT_APP_FIREBASE_MESSAGING_SENDER_ID
-        sync: false
-      - key: REACT_APP_FIREBASE_APP_ID
-        sync: false
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
